Fixed assets panel word wrap causing rendering issue

--- a/client/src/components/assets/assets.css
+++ b/client/src/components/assets/assets.css
@@ -15,6 +15,7 @@
     border: none;
     padding: 0;
     padding-left: 6px;
+    display: flex;
 }
 
 .assets .line-item > div {
